<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="30dp"
	android:background="@drawable/tab_bar_bg">
	<ImageView android:id="@+id/tab_push_img"
		android:layout_width="100dp"
		android:layout_height="4dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:background="@color/tab_img_color"/>
	<ImageView android:id="@+id/tab_custom_img"
		android:layout_width="100dp"
		android:layout_height="4dp"
		android:layout_toLeftOf="@id/tab_push_img"
		android:layout_alignParentBottom="true"
		android:background="@color/tab_img_color"
		android:visibility="invisible"/>
	<ImageView android:id="@+id/tab_category_img"
		android:layout_width="100dp"
		android:layout_height="4dp"
		android:layout_toRightOf="@id/tab_push_img"
		android:layout_alignParentBottom="true"
		android:background="@color/tab_img_color"
		android:visibility="invisible"/>

	<TextView android:id="@+id/tab_custom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/tab_custom_img"
		android:layout_alignRight="@id/tab_custom_img"
		android:layout_above="@id/tab_custom_img"
		android:layout_marginBottom="3dp"
		android:gravity="center"
		android:textColor="@color/tab_text_color"
		android:textSize="16sp"
		android:text="@string/tab_custom_title"/>
	<TextView android:id="@+id/tab_push"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/tab_push_img"
		android:layout_alignRight="@id/tab_push_img"
		android:layout_above="@id/tab_push_img"
		android:layout_marginBottom="3dp"
		android:gravity="center"
		android:textColor="@color/tab_text_color"
		android:textSize="16sp"
		android:text="@string/tab_push_title"/>
	<TextView android:id="@+id/tab_category"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/tab_category_img"
		android:layout_alignRight="@id/tab_category_img"
		android:layout_above="@id/tab_category_img"
		android:layout_marginBottom="3dp"
		android:gravity="center"
		android:textColor="@color/tab_text_color"
		android:textSize="16sp"
		android:text="@string/tab_category_title"/>
</RelativeLayout>